classDiagram
    class Categoria {
        -Long id
        -String nombre
        -List~Producto~ productos
    }

    class Producto {
        -Long id
        -String nombre
        -String descripcion
        -BigDecimal precio
        -Integer stock
        -Categoria categoria
    }

    class Pedido {
        -Long id
        -String clienteNombre
        -String chatId
        -List~ItemPedido~ items
        -BigDecimal total
        -String estado
        -LocalDateTime fechaHora
        +prePersist()
    }

    class ItemPedido {
        -Long id
        -Long productoId
        -String nombre
        -Integer cantidad
        -BigDecimal precio
        -BigDecimal subtotal
    }

    class Usuario {
        -Long id
        -String nombre
        -String apellido
        -String email
        -String dni
        -String direccion
        -String telefono
    }

    class Administrador {
        -long id
        -String user
        -String pass
        -String apellido
        -String nombre
    }

    Categoria "1" --> "0..*" Producto : contiene
    Pedido "1" *-- "1..*" ItemPedido : contiene (snapshot)
    ItemPedido "0..*" ..> "1" Producto : referencia (producto_id, sin FK)
    Usuario "1" ..> "0..*" Pedido : planificado, no implementado
